<resources>
    <string name="app_name">EnerFi</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_settings">Preferencias</string>
    <string name="orders_rcv">Ordenes</string>
    <string name="tab_container">Detalle</string>
    <string name="tab_order">Orden</string>
    <string name="tab_books">Dispositivos</string>


    <!-- Nav Drawer Screen-->
    <string name="logout">Cerrar sesión</string>
    <string name="register">Registrar Dispositivo</string>

    <!-- New Order Screen-->
    <string name="registerOrder">Registrar Dispositivo</string>

    <!-- Details Screen-->
    <string name="btnModify">MODIFICAR</string>
    <string name="btnDelete">ELIMINAR</string>
    <string name="qtyBooks">Cant. de Libros:</string>
    <string name="dataLabel">Fecha:</string>
    <string name="orderNumber">N° Orden:</string>

    <!-- Login Screen -->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>

    <!-- Preference Titles -->
    <string name="language_header">Idiomas</string>

    <!-- Language Preferences -->
    <string name="language_title">Elija Idioma</string>
    <string name="load">Cargar</string>
    <string name="client">Cliente</string>
    <string name="login">INGRESAR</string>

    <string name="app_name_ble">ESP BLE Prov</string>
    <string name="app_name_softap">ESP SoftAP Prov</string>

    <!-- Screen Titles -->
    <string name="title_activity_connect_device">Connect to Device</string>
    <string name="title_activity_pop">Proof of Possession</string>
    <string name="title_activity_wifi_scan_list">Select Wi-Fi Network</string>
    <string name="title_activity_wifi_config">Wi-Fi Configuration</string>
    <string name="title_activity_provisioning">Provisioning</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_device">Add Device</string>

    <!-- Button Text -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_provision">Provision</string>
    <string name="btn_scan_qr_code">Scan QR Code</string>
    <string name="btn_provision_device">Conectar nuevo dispositivo</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_connecting">Connecting&#8230;</string>
    <string name="btn_wifi_settings">Go to Wi-Fi Settings</string>
    <string name="btn_scan_again">Scan Again</string>
    <string name="btn_no_qr_code">I don\'t have a QR code</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_prefix">Change</string>
    <string name="btn_yes">Yes</string>

    <!-- Hint Text -->
    <string name="hint_pop">Proof of Possession</string>
    <string name="hint_ssid">Network Name</string>
    <string name="hint_value">Enter Value</string>
    <string name="hint_password">Password</string>

    <!-- Instruction Strings -->
    <string name="pop_instruction">Enter your proof of possession PIN for</string>
    <string name="setup_instructions">To complete setup of your device %1$s, please provide your Home Network\'s credentials.</string>
    <string name="connect_device_instruction_general">Para conectar su dispositivo, asegúrese de que esté encendido. Conecte su teléfono móvil a la red Wi-Fi con un nombre como PROV_XXXXXX</string>
    <string name="connect_device_instruction_specific">To provision your device, make sure it is turned ON. Connect your mobile phone to the Wi-Fi network with the name</string>

    <!-- Provisioning Steps Strings -->
    <string name="prov_step_1">Sending Wi-Fi credentials</string>
    <string name="prov_step_2">Applying Wi-Fi connection</string>
    <string name="prov_step_3">Checking provisioning status</string>
    <string name="error_session_creation">Failed to create session</string>
    <string name="error_prov_step_1">Failed to send Wi-Fi credentials</string>
    <string name="error_prov_step_2">Failed to apply Wi-Fi credentials</string>
    <string name="error_prov_step_3">Failed to provisioning device</string>

    <string name="title_activity_provision_landing">Connect to device</string>
    <string name="connected_to_device_instructions">You are now connected to the device. To provision the device, please enter your Network credentials on the next page.</string>
    <string name="no_internet_note">To make sure you are really connected to the device, please make sure you accept the system dialog informing you that network has no internet access.</string>
    <string name="connect_to_device_action">Connect</string>
    <string name="connected_to_device_action">Provision Network</string>
    <string name="title_activity_provision_instructions">Provision Instructions</string>
    <string name="ssid_hint_text">Network Name</string>
    <string name="password_hint_text">Password</string>
    <string name="provision">Provision</string>

    <string name="success_text">Device has been successfully provisioned!</string>
    <string name="wifi_disconnected_text">Please check the device indicators for provisioning status.</string>
    <string name="done">Done</string>

    <string name="enable_bluetooth_instructions">To provision your new device, please make sure that your Phone\'s Bluetooth is turned on and within range of your new device.</string>
    <string name="enabled_bluetooth_instructions">To provision the device, please enter your Network credentials on the next page.</string>
    <string name="enable_bluetooth_action">Enable</string>
    <string name="enabled_bluetooth_action">Provision Network</string>

    <!-- Strings used for Progress -->
    <string name="progress_scanning">Scanning Devices...</string>
    <string name="progress_get_status">Getting Status</string>
    <string name="progress_loading">Loading...</string>

    <!--Error Messages-->
    <string name="error_title">Error!</string>
    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="error_unknown">Device provisioning failed. Reason : Unknown.</string>
    <string name="error_pop_incorrect">Error establishing session.\n Check if Proof of Possession(POP) is correct!</string>
    <string name="error_no_ble_device">No Bluetooth devices found!</string>
    <string name="error_device_connect_failed">Error! Failed to connect with device.</string>
    <string name="error_ssid_empty">Network name cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_provisioning">Reset your board to factory defaults and retry</string>
    <string name="error_wifi_off">Please turn on Wi-Fi to connect with device.</string>

    <string name="prefix">Prefix :</string>
    <string name="hint_prefix">Enter Prefix</string>
    <string name="hint_key">Enter PIN</string>
    <string name="devices_title">Devices</string>
    <string name="enter_device_key">Enter Your Proof Of Possession PIN</string>
    <string name="app_version">App Version</string>
    <string name="powered_by_esp">Powered by ESPRESSIF</string>

    <string name="join_other_network">Join Other Network</string>
    <string name="networks">Networks</string>
    <string name="connect_your_device">Connect to your device</string>

    <string name="dialog_msg_gps">Location services are disabled. Please enable them to continue</string>
    <string name="dialog_msg_device_selection">Select Device Type</string>
    <string name="looking_for_qr_code">Looking for QR Code</string>
    <string name="position_camera_for_qr_code">Please position the camera to point at the QR Code.</string>
    <string name="dialog_title_network_info">Enter Network Information</string>
    <string name="dialog_msg_ble_device_disconnection">Device disconnected</string>

    <!-- Preference Titles -->
    <string name="device_settings">Device Settings</string>

    <!-- Messages Preferences -->
    <string name="device_selection_title">Supported Device Types</string>
    <string name="security_selection_title">Encrypted Device Communication</string>
    <string name="summary_security">Send data using Security1</string>
    <string name="title_activity_wi_fi_scan">WiFiScanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>

